('GSM' is Greg Sabino Mullane, greg@turnstep.com)

2.11.9

  - Fix a memory leak when parsing returned arrays [reported by Bálint Szilakszi]
    [GSM] (CPAN bug #44225)
  - Do proper dequoting of boolean arrays [Armando Santos, GSM] (CPAN bug #43768)
  - Fix minor bugs in POD docs. [Frank Wiegand] (CPAN bug #44242)
  - Fix minor bug in POD docs. [Tim Mattison]

2.11.8 Released December 28, 2008

  - Fix minor bug in t/12placeholders.t test (CPAN bug #41723)

2.11.7 Released December 13, 2008 (subversion r12158)

  - Fix placeholder parsing logic (CPAN bug #41582)

2.11.6 Released November 30, 2008 (subversion r12126)

  - Only set UTF8 flag on array items after UTF8 test. (CPAN bug #41253)
    [Armando Santos]

2.11.5 Released November 24, 2008 (subversion r12102)

  - Clear prepared_statement name on failure to prepare: prevents 
    the wrong error when using prepare_cached. [GSM]

2.11.4 Released November 12, 2008

  - Don't set LC_MESSAGES unless superuser in tests. Remove all 
    language-specific string checking for tests. (CPAN bug #40604)

2.11.3 Released November 3, 2008 (subversion r12031)

  - Force LC_MESSAGES to 'C' inside tests (CPAN bug #40604)
  - Minor compiler tweaks.
  - Fix small POD error (CPAN bug #40209)
  - Tweak Perl::Critic policy list (CPAN bug #40130)

2.11.2 Released October 15, 2008 (subversion r11983)

  - Fix core dump when invalid placeholders used. (CPAN bug #40075) [GSM]

2.11.1 Released October 14, 2008 (subversion r11980)

  - $sth->{ParamTypes} returns 'TYPE' when possible.

2.11.0 Released October 13, 2008 (subversion r11976)

  - $sth->{ParamTypes} now returns a hashref per the DBI docs. [GSM]
  - Adjustment of Makefile.PL to fix problem with Strawberry Perl.
    Thanks to Martin Evan (martin.evans@easysoft.com) and Brian 
    (elspicyjack@gmail.com) on the dbi-users list.

2.10.7 Released September 22, 2008 (subversion r11869)

  - Fix test issue when dbname contains dashes.
    [Rainer Tammer]